# image-rec

./: README.md
app/: Dockerfile  classifier.py  datalayer.py  main.py  models.py  pyproject.toml
app/tests/: test_models.py
charts/image-rec/: .helmignore  Chart.yaml  values.yaml
charts/image-rec/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
script/: uninstall-helm.sh
